# my-first-pico

./: README.md  chase_gradient.py
circuitpython/: audio.py  blink.py  find_audio_capable_pins.py
micropython/: chase_basic.py  neopixel_and_wifi_test.py
my-first-c-code/blink/: CMakeLists.txt  picow_blink.c
my-first-c-code/hello-world/: CMakeLists.txt  hello_usb.c
